[package]
name = "netlist"
version = "0.1.7"
authors = ["Eric Hsu <xuzhenyutc@icloud.com>"]
edition = "2018"
description = "generic netlist data structure for VLSI design"
repository = "https://github.com/eda-rs/netlist"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["eda","graph"]
exclude = [
    "testcases/*",
    "tests/*",
    "examples/*"
]

[dependencies]
nom = "7.0"
thiserror = "1.0"