[package]
name = "netlist"
version = "0.1.15"
authors = ["Eric Hsu <xuzhenyutc@icloud.com>"]
edition = "2021"
description = "generic netlist data structure for VLSI design"
repository = "https://github.com/eda-rs/netlist"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["eda","graph"]
exclude = [
    "testcases/*",
    "tests/*",
    "examples/*"
]

[dependencies]
nom = "7.0"
thiserror = "1.0"
serde-xml-rs = "0.6.0"
serde = {version = "1.0", features = ["derive"]}